Added all pages

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
 		<div id="wrapper">
 
 			<!-- Header -->
-			<header id="header" class="alt">
+			<header id="header" class="alt style5">
 				<a href="index.html" class="logo"><strong>JOAN FRANCESC</strong> <span>DevOps Engineer</span></a>
 				<nav>
 					<a href="#menu">Menu</a>
@@ -42,17 +42,18 @@
 			</nav>
 
 			<!-- Banner -->
-			<section id="banner" class="major">
+			<!-- Note: The "styleN" class below should match that of the header element. -->
+			<section id="banner" class="style5">
 				<div class="inner">
+					<span class="image">
+						<img src="images/pic07.jpg" alt="" />
+					</span>
 					<header class="major">
-						<h1>Greetings, welcome to Joan's Portfolio</h1>
+						<h1>About me</h1>
 					</header>
 					<div class="content">
-						<p>DevOps Engineer's Journey into Seamless Integration<br />
-						and Continuous Delivery</p>
-						<ul class="actions">
-							<li><a href="#one" class="button next scrolly">Get Started</a></li>
-						</ul>
+						<p>Lorem ipsum dolor sit amet nullam consequat<br />
+						sed veroeros. tempus adipiscing nulla.</p>
 					</div>
 				</div>
 			</section>
@@ -61,77 +62,79 @@
 			<div id="main">
 
 				<!-- One -->
-				<section id="one" class="tiles">
-					<article>
-						<span class="image">
-							<img src="images/pic01.jpg" alt="" />
-						</span>
+				<section id="one">
+					<div class="inner">
 						<header class="major">
-							<h3><a href="experience.html" class="link"><i class="fa fa-briefcase"></i>  Experience</a></h3>
-							<p>Explore my experience</p>
+							<h2>Sed amet aliquam</h2>
 						</header>
-					</article>
-					<article>
-						<span class="image">
-							<img src="images/pic02.jpg" alt="" />
-						</span>
-						<header class="major">
-							<h3><a href="education.html" class="link"><i class="fa fa-graduation-cap"></i>  Education</a></h3>
-							<p>Find my education and certifications here</p>
-						</header>
-					</article>
-					<article>
-						<span class="image">
-							<img src="images/pic03.jpg" alt="" />
-						</span>
-						<header class="major">
-							<h3><a href="skills.html" class="link"><i class="fa fa-flask"></i>  Skills</a></h3>
-							<p>All the tools and skills</p>
-						</header>
-					</article>
-					<article>
-						<span class="image">
-							<img src="images/pic04.jpg" alt="" />
-						</span>
-						<header class="major">
-							<h3><a href="projects.html" class="link"><i class="fa fa-terminal"></i>  Projects</a></h3>
-							<p>Watch and explore all the projects I am working on</p>
-						</header>
-					</article>
-					<article>
-						<span class="image">
-							<img src="images/pic05.jpg" alt="" />
-						</span>
-						<header class="major">
-							<h3><a href="about.html" class="link"><i class="fa fa-user"></i>  About me</a></h3>
-							<p>Know a little about me and my hobbies</p>
-						</header>
-					</article>
-					<article>
-						<span class="image">
-							<img src="images/pic06.jpg" alt="" />
-						</span>
-						<header class="major">
-							<h3><a href="assets/documents/RESUME_DEVOPS_JOAN.pdf" target="_blank" class="link"><i class="fa fa-paperclip"></i>  Resume</a></h3>
-							<p>Click here if you want to get my resume</p>
-						</header>
-					</article>
+						<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>
+					</div>
 				</section>
 
 				<!-- Two -->
-				<!--
-				<section id="two">
+				<section id="two" class="spotlights">
+					<section>
+						<a href="generic.html" class="image">
+							<img src="images/pic08.jpg" alt="" data-position="center center" />
+						</a>
+						<div class="content">
+							<div class="inner">
+								<header class="major">
+									<h3>Orci maecenas</h3>
+								</header>
+								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+								<ul class="actions">
+									<li><a href="generic.html" class="button">Learn more</a></li>
+								</ul>
+							</div>
+						</div>
+					</section>
+					<section>
+						<a href="generic.html" class="image">
+							<img src="images/pic09.jpg" alt="" data-position="top center" />
+						</a>
+						<div class="content">
+							<div class="inner">
+								<header class="major">
+									<h3>Rhoncus magna</h3>
+								</header>
+								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+								<ul class="actions">
+									<li><a href="generic.html" class="button">Learn more</a></li>
+								</ul>
+							</div>
+						</div>
+					</section>
+					<section>
+						<a href="generic.html" class="image">
+							<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
+						</a>
+						<div class="content">
+							<div class="inner">
+								<header class="major">
+									<h3>Sed nunc ligula</h3>
+								</header>
+								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+								<ul class="actions">
+									<li><a href="generic.html" class="button">Learn more</a></li>
+								</ul>
+							</div>
+						</div>
+					</section>
+				</section>
+
+				<!-- Three -->
+				<section id="three">
 					<div class="inner">
 						<header class="major">
 							<h2>Massa libero</h2>
 						</header>
 						<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
 						<ul class="actions">
-							<li><a href="landing.html" class="button next">Get Started</a></li>
+							<li><a href="generic.html" class="button next">Get Started</a></li>
 						</ul>
 					</div>
 				</section>
-				-->
 
 			</div>
 
