--- a/education.html
+++ b/education.html
@@ -31,7 +31,7 @@
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="experience.html">Experience</a></li>
-					<li><a href="education.html">Education</a></li>
+					<li><a href="education.html">Education and Certificates</a></li>
 					<li><a href="skills.html">Skills</a></li>
 					<li><a href="projects.html">Projects</a></li>
 					<li><a href="about.html">About me</a></li>
@@ -49,7 +49,7 @@
 						<img src="images/pic07.jpg" alt="" />
 					</span>
 					<header class="major">
-						<h1>Education</h1>
+						<h1>Education and Certificates</h1>
 					</header>
 					<div class="content">
 						<p>Lorem ipsum dolor sit amet nullam consequat<br />
@@ -61,28 +61,54 @@
 			<!-- Main -->
 			<div id="main">
 
-				<!-- One -->
 				<section id="one">
 					<div class="inner">
 						<header class="major">
-							<h2>Sed amet aliquam</h2>
+							<h2>Education</h2>
+						</header>
+						<!--<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>-->
+					</div>
+				</section>
+
+				<section id="two" class="spotlights">
+					<section>
+						<a href="generic.html" class="image">
+							<img src="images/udl.png" alt="" data-position="center center" />
+						</a>
+						<div class="content">
+							<div class="inner">
+								<header class="major">
+									<h3>Bachelor's Degree in Digital Interaction and Computing Techniques</h3>
+								</header>
+								<p>I pursued my studies at the University of Lleida, specifically at the Universitary Campus d'Igualada, where I acquired a solid foundation in Information Technology.</p>
+								<ul class="actions">
+									<li><a href="generic.html" class="button">Learn more</a></li>
+								</ul>
+							</div>
+						</div>
+					</section>
+				</section>
+
+				<section id="three">
+					<div class="inner">
+						<header class="major">
+							<h2>Certificates</h2>
 						</header>
 						<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>
 					</div>
 				</section>
 
-				<!-- Two -->
-				<section id="two" class="spotlights">
+				<section id="forth" class="spotlights">
 					<section>
 						<a href="generic.html" class="image">
-							<img src="images/pic08.jpg" alt="" data-position="center center" />
+							<img src="images/udl.png" alt="" data-position="center center" />
 						</a>
 						<div class="content">
 							<div class="inner">
 								<header class="major">
-									<h3>Orci maecenas</h3>
+									<h3>Bachelor's Degree in Digital Interaction and Computing Techniques</h3>
 								</header>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+								<p>I pursued my studies at the University of Lleida, specifically at the Universitary Campus d'Igualada, where I acquired a solid foundation in Information Technology.</p>
 								<ul class="actions">
 									<li><a href="generic.html" class="button">Learn more</a></li>
 								</ul>
@@ -123,7 +149,7 @@
 					</section>
 				</section>
 
-				<!-- Three -->
+				<!--
 				<section id="three">
 					<div class="inner">
 						<header class="major">
@@ -135,6 +161,7 @@
 						</ul>
 					</div>
 				</section>
+				-->
 
 			</div>
 
