--- a/experience.html
+++ b/experience.html
@@ -31,7 +31,7 @@
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="experience.html">Experience</a></li>
-					<li><a href="education.html">Education</a></li>
+					<li><a href="education.html">Education and Certificates</a></li>
 					<li><a href="skills.html">Skills</a></li>
 					<li><a href="projects.html">Projects</a></li>
 					<li><a href="about.html">About me</a></li>
