--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="experience.html">Experience</a></li>
-					<li><a href="education.html">Education</a></li>
+					<li><a href="education.html">Education and Certificates</a></li>
 					<li><a href="skills.html">Skills</a></li>
 					<li><a href="projects.html">Projects</a></li>
 					<li><a href="about.html">About me</a></li>
@@ -76,7 +76,7 @@
 							<img src="images/pic02.jpg" alt="" />
 						</span>
 						<header class="major">
-							<h3><a href="education.html" class="link"><i class="fa fa-graduation-cap"></i>  Education</a></h3>
+							<h3><a href="education.html" class="link"><i class="fa fa-graduation-cap"></i>  Education and Certificates</a></h3>
 							<p>Find my education and certifications here</p>
 						</header>
 					</article>
