Certificates and education added in the main page

--- a/education.html
+++ b/education.html
@@ -73,7 +73,7 @@
 				<section id="two" class="spotlights">
 					<section>
 						<a href="generic.html" class="image">
-							<img src="images/udl.png" alt="" data-position="center center" />
+							<img src="images/udl.jpg" alt="" data-position="center center" />
 						</a>
 						<div class="content">
 							<div class="inner">
@@ -94,21 +94,22 @@
 						<header class="major">
 							<h2>Certificates</h2>
 						</header>
-						<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>
+						<!--<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>-->
 					</div>
 				</section>
 
 				<section id="forth" class="spotlights">
 					<section>
 						<a href="generic.html" class="image">
-							<img src="images/udl.png" alt="" data-position="center center" />
+							<img src="images/DevOps.jpg" alt="" data-position="center center" />
 						</a>
 						<div class="content">
 							<div class="inner">
 								<header class="major">
-									<h3>Bachelor's Degree in Digital Interaction and Computing Techniques</h3>
+									<h3>DevOps with Docker, Jenkins, Kubernetes, git, GitFlow CI and CD</h3>
+									<h4>Udemy</h4>
 								</header>
-								<p>I pursued my studies at the University of Lleida, specifically at the Universitary Campus d'Igualada, where I acquired a solid foundation in Information Technology.</p>
+								<p>Through this course, I delved into the essentials of DevOps, gaining insights into key tools and methodologies such as Docker, Kubernetes, Jenkins, Grafana, and Git.</p>
 								<ul class="actions">
 									<li><a href="generic.html" class="button">Learn more</a></li>
 								</ul>
@@ -117,14 +118,15 @@
 					</section>
 					<section>
 						<a href="generic.html" class="image">
-							<img src="images/pic09.jpg" alt="" data-position="top center" />
+							<img src="images/Docker.jpg" alt="" data-position="top center" />
 						</a>
 						<div class="content">
 							<div class="inner">
 								<header class="major">
-									<h3>Rhoncus magna</h3>
+									<h3>Docker for the Absolute Beginner</h3>
+									<h4>Udemy</h4>
 								</header>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+								<p>True to its name, the course provided a comprehensive exploration of Docker, covering essential aspects of the technology such as Dockerfile, Docker Compose, Networks, and Images.</p>
 								<ul class="actions">
 									<li><a href="generic.html" class="button">Learn more</a></li>
 								</ul>
@@ -133,12 +135,13 @@
 					</section>
 					<section>
 						<a href="generic.html" class="image">
-							<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
+							<img src="images/c.jpg" alt="" data-position="25% 25%" />
 						</a>
 						<div class="content">
 							<div class="inner">
 								<header class="major">
-									<h3>Sed nunc ligula</h3>
+									<h3>C Programming Bootcamp - The Complete C Language Course</h3>
+									<h4>Udemy</h4>
 								</header>
 								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 								<ul class="actions">
@@ -149,19 +152,18 @@
 					</section>
 				</section>
 
-				<!--
-				<section id="three">
+				<section id="final">
 					<div class="inner">
 						<header class="major">
-							<h2>Massa libero</h2>
+							<h2>Courses in progress</h2>
 						</header>
-						<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
-						<ul class="actions">
-							<li><a href="generic.html" class="button next">Get Started</a></li>
+						<ul>
+							<li>AWS Cloud Practitioner certificate.</li>
+							<li>Kubernetes for the absolute beginer.</li>
+							<li>Ansible for the absolute beginer.</li>
 						</ul>
 					</div>
 				</section>
-				-->
 
 			</div>
 
