--- a/education.html
+++ b/education.html
@@ -37,7 +37,7 @@
 					<li><a href="about.html">About me</a></li>
 				</ul>
 				<ul class="actions stacked">
-					<li><a href="assets/documents/RESUME_DEVOPS_JOAN.pdf" target="_blank" class="button primary fit">Get my resume</a></li>
+					<li><a href="documents/RESUME_DEVOPS_JOAN.pdf" target="_blank" class="button primary fit">Get my resume</a></li>
 				</ul>
 			</nav>
 
@@ -51,10 +51,10 @@
 					<header class="major">
 						<h1>Education and Certificates</h1>
 					</header>
-					<div class="content">
+					<!--<div class="content">
 						<p>Lorem ipsum dolor sit amet nullam consequat<br />
 						sed veroeros. tempus adipiscing nulla.</p>
-					</div>
+					</div>-->
 				</div>
 			</section>
 
@@ -72,7 +72,7 @@
 
 				<section id="two" class="spotlights">
 					<section>
-						<a href="generic.html" class="image">
+						<a class="image">
 							<img src="images/udl.jpg" alt="" data-position="center center" />
 						</a>
 						<div class="content">
@@ -100,7 +100,7 @@
 
 				<section id="forth" class="spotlights">
 					<section>
-						<a href="generic.html" class="image">
+						<a class="image">
 							<img src="images/DevOps.jpg" alt="" data-position="center center" />
 						</a>
 						<div class="content">
@@ -117,7 +117,7 @@
 						</div>
 					</section>
 					<section>
-						<a href="generic.html" class="image">
+						<a class="image">
 							<img src="images/Docker.jpg" alt="" data-position="top center" />
 						</a>
 						<div class="content">
@@ -134,7 +134,7 @@
 						</div>
 					</section>
 					<section>
-						<a href="generic.html" class="image">
+						<a class="image">
 							<img src="images/c.jpg" alt="" data-position="25% 25%" />
 						</a>
 						<div class="content">
@@ -143,7 +143,7 @@
 									<h3>C Programming Bootcamp - The Complete C Language Course</h3>
 									<h4>Udemy</h4>
 								</header>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+								<p>The C course provided me with a thorough understanding of the C programming language, allowing me to delve deeply into its intricacies and gain a comprehensive grasp of working with it.</p>
 								<ul class="actions">
 									<li><a href="generic.html" class="button">Learn more</a></li>
 								</ul>
@@ -158,9 +158,9 @@
 							<h2>Courses in progress</h2>
 						</header>
 						<ul>
-							<li>AWS Cloud Practitioner certificate.</li>
-							<li>Kubernetes for the absolute beginer.</li>
-							<li>Ansible for the absolute beginer.</li>
+							<li>AWS Cloud Practitioner certificate - AWS Training</li>
+							<li>Kubernetes for the absolute beginer - Udemy</li>
+							<li>Ansible for the absolute beginer - Udemy</li>
 						</ul>
 					</div>
 				</section>
