--- a/experience.html
+++ b/experience.html
@@ -37,7 +37,7 @@
 					<li><a href="about.html">About me</a></li>
 				</ul>
 				<ul class="actions stacked">
-					<li><a href="assets/documents/RESUME_DEVOPS_JOAN.pdf" target="_blank" class="button primary fit">Get my resume</a></li>
+					<li><a href="documents/RESUME_DEVOPS_JOAN.pdf" target="_blank" class="button primary fit">Get my resume</a></li>
 				</ul>
 			</nav>
 
@@ -52,8 +52,8 @@
 						<h1>Experience</h1>
 					</header>
 					<div class="content">
-						<p>Lorem ipsum dolor sit amet nullam consequat<br />
-						sed veroeros. tempus adipiscing nulla.</p>
+						<!--<p>Lorem ipsum dolor sit amet nullam consequat<br />
+						sed veroeros. tempus adipiscing nulla.</p>-->
 					</div>
 				</div>
 			</section>
@@ -61,7 +61,7 @@
 			<!-- Main -->
 			<div id="main">
 
-				<!-- One -->
+				<!--
 				<section id="one">
 					<div class="inner">
 						<header class="major">
@@ -70,19 +70,21 @@
 						<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>
 					</div>
 				</section>
+				-->
 
 				<!-- Two -->
 				<section id="two" class="spotlights">
 					<section>
-						<a href="generic.html" class="image">
-							<img src="images/pic08.jpg" alt="" data-position="center center" />
+						<a class="image">
+							<img src="images/mpm.jpg" alt="" data-position="center center" />
 						</a>
 						<div class="content">
 							<div class="inner">
 								<header class="major">
-									<h3>Orci maecenas</h3>
+									<h3>MPM Software</h3>
 								</header>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+								<h4>Sep. 2021 - Aug. 2023</h4>
+								<p>.NET Developer</p>
 								<ul class="actions">
 									<li><a href="generic.html" class="button">Learn more</a></li>
 								</ul>
@@ -90,21 +92,23 @@
 						</div>
 					</section>
 					<section>
-						<a href="generic.html" class="image">
-							<img src="images/pic09.jpg" alt="" data-position="top center" />
+						<a class="image">
+							<img src="images/ateneu.jpg" alt="" data-position="top center" />
 						</a>
 						<div class="content">
 							<div class="inner">
 								<header class="major">
-									<h3>Rhoncus magna</h3>
+									<h3>Ateneu Cinema</h3>
 								</header>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+								<h4>Mar. 2018 - Mar. 2022</h4>
+								<p>Attendant and responsible</p>
 								<ul class="actions">
 									<li><a href="generic.html" class="button">Learn more</a></li>
 								</ul>
 							</div>
 						</div>
 					</section>
+					<!--
 					<section>
 						<a href="generic.html" class="image">
 							<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
@@ -121,9 +125,10 @@
 							</div>
 						</div>
 					</section>
+					-->
 				</section>
 
-				<!-- Three -->
+				<!--
 				<section id="three">
 					<div class="inner">
 						<header class="major">
@@ -135,6 +140,7 @@
 						</ul>
 					</div>
 				</section>
+				-->
 
 			</div>
 
