--- a/education.html
+++ b/education.html
@@ -82,7 +82,7 @@
 								</header>
 								<p>I pursued my studies at the University of Lleida, specifically at the Universitary Campus d'Igualada, where I acquired a solid foundation in Information Technology.</p>
 								<ul class="actions">
-									<li><a href="generic.html" class="button">Learn more</a></li>
+									<li><a href="gtidic.html" class="button">Learn more</a></li>
 								</ul>
 							</div>
 						</div>
@@ -111,7 +111,7 @@
 								</header>
 								<p>Through this course, I delved into the essentials of DevOps, gaining insights into key tools and methodologies such as Docker, Kubernetes, Jenkins, Grafana, and Git.</p>
 								<ul class="actions">
-									<li><a href="generic.html" class="button">Learn more</a></li>
+									<li><a href="documents/CERT_UDEMY_DEVOPS.pdf" target="_blank" class="button">View certificate</a></li>
 								</ul>
 							</div>
 						</div>
@@ -128,7 +128,7 @@
 								</header>
 								<p>True to its name, the course provided a comprehensive exploration of Docker, covering essential aspects of the technology such as Dockerfile, Docker Compose, Networks, and Images.</p>
 								<ul class="actions">
-									<li><a href="generic.html" class="button">Learn more</a></li>
+									<li><a href="documents/CERT_UDEMY_DOCKER.pdf" target="_blank" class="button">View certificate</a></li>
 								</ul>
 							</div>
 						</div>
@@ -145,7 +145,7 @@
 								</header>
 								<p>The C course provided me with a thorough understanding of the C programming language, allowing me to delve deeply into its intricacies and gain a comprehensive grasp of working with it.</p>
 								<ul class="actions">
-									<li><a href="generic.html" class="button">Learn more</a></li>
+									<li><a href="documents/CERT_UDEMY_C-BOOTCAMP.pdf" target="_blank" class="button">View certificate</a></li>
 								</ul>
 							</div>
 						</div>
