Experience and studies ok

--- a/experience.html
+++ b/experience.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+		<link rel="icon" type="image/x-icon" href="/images/favicon.png">
 		<title>Joan's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -49,7 +50,7 @@
 						<img src="images/pic07.jpg" alt="" />
 					</span>
 					<header class="major">
-						<h1>Experience</h1>
+						<h1>Relevant experience</h1>
 					</header>
 					<div class="content">
 						<!--<p>Lorem ipsum dolor sit amet nullam consequat<br />
@@ -85,8 +86,9 @@
 								</header>
 								<h4>Sep. 2021 - Aug. 2023</h4>
 								<p>.NET Developer</p>
+								<p>Developed and maintained .NET web applications for insurance companies, as well as help the DevOps team to improve the system.</p>
 								<ul class="actions">
-									<li><a href="generic.html" class="button">Learn more</a></li>
+									<li><a href="https://www.mpmsoftware.com/es/inicio/" target="_blank" class="button">Official page</a></li>
 								</ul>
 							</div>
 						</div>
@@ -102,8 +104,9 @@
 								</header>
 								<h4>Mar. 2018 - Mar. 2022</h4>
 								<p>Attendant and responsible</p>
+								<p>Responsible of the bar of the cinema, managing the stock and duties, as well as bring the best service possible to the client.</p>
 								<ul class="actions">
-									<li><a href="generic.html" class="button">Learn more</a></li>
+									<li><a href="https://ateneucinema.cat/" target="_blank" class="button">Official page</a></li>
 								</ul>
 							</div>
 						</div>
