--- a/gtidic.html
+++ b/gtidic.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+		<link rel="icon" type="image/x-icon" href="/images/favicon.png">
 		<title>Joan's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -45,22 +46,26 @@
 			<div id="main" class="alt">
 
 				<!-- One -->
-					<section id="one">
-						<div class="inner">
-							<header class="major">
-								<h1>Bachelor's Degree in Digital Interaction and Computing Techniques</h1>
-							</header>
-							<p>After making the University access test of Catalunya (PAU), I was not sure yet what to study, but finally I decided to enroll the Bachelor's Degree in Digital Interaction and Computer Techniques, 
-							a three year Bachelor Degree focused in the practical part of the IT, getting a strong knowledge of the basis on programming, IT, systems and UX, among others.</p>
-							<p>Thanks to this Degree I've discovered my passion for the IT world, and in the third year, thanks to the System Administrator subject, my passion for the automation, DevOps and SRE world, so I decided to focus my 
-							final degree project tho this area, finally making the project called "A small-scale and low-cost cloud environment based on Kubernetes and Raspberry Pi", working with some of the main technologies of Systems Administrator 
-							World, like Docker, Kubernetes, Linux Systems, creation of Clusters and AWS EKS, the specialized service for kubernetes of AWS.</p>
-							<p>Meanwhile the third year of the career, I had the oportunity to enroll for first time in the professional world with some subjects based in working in a company as software developer,
-							so I worked during the last year of the career as a .NET Developer at MPM Software.</p>
-							<p>The final GPA of the course was a 8.14 out of 10.</p>
-						</div>
-					</section>
-
+				<section id="one">
+					<div class="inner">
+						<header class="major">
+							<h1>Bachelor's Degree in Digital Interaction and Computing Techniques</h1>
+						</header>
+						<p>After making the University access test of Catalunya (PAU), I was not sure yet what to study, but finally I decided to enroll the Bachelor's Degree in Digital Interaction and Computer Techniques, 
+						a three year Bachelor Degree focused in the practical part of the IT, getting a strong knowledge of the basis on programming, IT, systems and UX, among others.</p>
+						<p>Thanks to this Degree I've discovered my passion for the IT world, and in the third year, thanks to the System Administrator subject, my passion for the automation, DevOps and SRE world, so I decided to focus my 
+						final degree project tho this area, finally making the project called "A small-scale and low-cost cloud environment based on Kubernetes and Raspberry Pi", working with some of the main technologies of Systems Administrator 
+						World, like Docker, Kubernetes, Linux Systems, creation of Clusters and AWS EKS, the specialized service for kubernetes of AWS.</p>
+						<p>Meanwhile the third year of the career, I had the oportunity to enroll for first time in the professional world with some subjects based in working in a company as software developer,
+						so I worked during the last year of the career as a .NET Developer at MPM Software.</p>
+						<p>The final GPA of the course was a 8.14 out of 10.</p>
+						<ul class="actions">
+							<li>
+								<a href="https://grauinteraccioicomputacio.udl.cat/en/" target="_blank" class="button primary">Official page</a>
+							</li>
+						</ul>
+					</div>
+				</section>
 			</div>
 
 			<!-- Contact -->
