--- a/about.html
+++ b/about.html
@@ -5,7 +5,8 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
+	<head>	
+		<link rel="icon" type="image/x-icon" href="/images/favicon.png">
 		<title>Joan's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -52,8 +53,7 @@
 						<h1>About me</h1>
 					</header>
 					<div class="content">
-						<p>Lorem ipsum dolor sit amet nullam consequat<br />
-						sed veroeros. tempus adipiscing nulla.</p>
+						<p>IN PROGRESS...<p/>
 					</div>
 				</div>
 			</section>
