--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+		<link rel="icon" type="image/x-icon" href="/images/favicon.png">
 		<title>Joan's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -112,7 +113,7 @@
 							<img src="images/pic06.jpg" alt="" />
 						</span>
 						<header class="major">
-							<h3><a href="documents/RESUME_DEVOPS_JOAN.pdf" target="_blank" class="link"><i class="fa fa-paperclip"></i>  Resume</a></h3>
+							<h3><a href="documents/RESUME_DEVOPS_JOAN.pdf" class="link"><i class="fa fa-paperclip"></i>  Resume</a></h3>
 							<p>Click here if you want to get my resume</p>
 						</header>
 					</article>
