--- a/projects.html
+++ b/projects.html
@@ -52,16 +52,18 @@
 					<header class="major">
 						<h1>Projects</h1>
 					</header>
+					<!--
 					<div class="content">
 						<p>IN PROGRESS...<p/>
 					</div>
+					-->
 				</div>
 			</section>
 
 			<!-- Main -->
 			<div id="main">
 
-				<!-- One -->
+				<!--
 				<section id="one">
 					<div class="inner">
 						<header class="major">
@@ -70,41 +72,44 @@
 						<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>
 					</div>
 				</section>
+				-->
 
 				<!-- Two -->
 				<section id="two" class="spotlights">
 					<section>
 						<a href="generic.html" class="image">
-							<img src="images/pic08.jpg" alt="" data-position="center center" />
+							<img src="images/portfolio.png" alt="Ilustration by https://storyset.com/" data-position="center center" />
 						</a>
 						<div class="content">
 							<div class="inner">
 								<header class="major">
-									<h3>Orci maecenas</h3>
+									<h3>Portfolio</h3>
 								</header>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+								<p>This portfolio is been made using an HTML5UP and deployed using Github Pages.</p>
 								<ul class="actions">
-									<li><a href="generic.html" class="button">Learn more</a></li>
+									<li><a href="https://www.github.com/joanfrancescpedro/joanfrancescpedro.github.io" target="_blank" class="button">View the project</a></li>
 								</ul>
 							</div>
 						</div>
 					</section>
 					<section>
 						<a href="generic.html" class="image">
-							<img src="images/pic09.jpg" alt="" data-position="top center" />
+							<img src="images/project2.png" alt="Ilustration by https://storyset.com/" data-position="top center" />
 						</a>
 						<div class="content">
 							<div class="inner">
 								<header class="major">
-									<h3>Rhoncus magna</h3>
+									<h3>Docker Nginx</h3>
 								</header>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+								<p>Created a full Dockerfile from scratch using as base Alpine, installing and running Nginx to deploy a web application, and a bash script 
+								to execute the container automatically.</p>
 								<ul class="actions">
-									<li><a href="generic.html" class="button">Learn more</a></li>
+									<li><a href="https://www.github.com/joanfrancescpedro/Docker-Nginx" target="_blank" class="button">View the project</a></li>
 								</ul>
 							</div>
 						</div>
 					</section>
+					<!--
 					<section>
 						<a href="generic.html" class="image">
 							<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
@@ -121,17 +126,19 @@
 							</div>
 						</div>
 					</section>
+					-->
 				</section>
 
 				<!-- Three -->
 				<section id="three">
 					<div class="inner">
 						<header class="major">
-							<h2>Massa libero</h2>
+							<h2>Other Projects</h2>
 						</header>
-						<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
+						<p>If you are interested in other projects, feel free to explore all my github repositories, where you can find projects from the university 
+						and other projects I made.</p>
 						<ul class="actions">
-							<li><a href="generic.html" class="button next">Get Started</a></li>
+							<li><a href="https://github.com/joanfrancescpedro" target="_blank" class="button next">All the repositories</a></li>
 						</ul>
 					</div>
 				</section>
