Programming languages skills ok

--- a/education.html
+++ b/education.html
@@ -74,7 +74,7 @@
 				<section id="two" class="spotlights">
 					<section>
 						<a class="image">
-							<img src="images/udl.jpg" alt="" data-position="center center" />
+							<img src="images/education/udl.jpg" alt="" data-position="center center" />
 						</a>
 						<div class="content">
 							<div class="inner">
@@ -102,7 +102,7 @@
 				<section id="forth" class="spotlights">
 					<section>
 						<a class="image">
-							<img src="images/DevOps.jpg" alt="" data-position="center center" />
+							<img src="images/education/DevOps.jpg" alt="" data-position="center center" />
 						</a>
 						<div class="content">
 							<div class="inner">
@@ -119,7 +119,7 @@
 					</section>
 					<section>
 						<a class="image">
-							<img src="images/Docker.jpg" alt="" data-position="top center" />
+							<img src="images/education/Docker.jpg" alt="" data-position="top center" />
 						</a>
 						<div class="content">
 							<div class="inner">
@@ -136,7 +136,7 @@
 					</section>
 					<section>
 						<a class="image">
-							<img src="images/c.jpg" alt="" data-position="25% 25%" />
+							<img src="images/education/c.jpg" alt="" data-position="25% 25%" />
 						</a>
 						<div class="content">
 							<div class="inner">
@@ -242,6 +242,7 @@
 		<script src="assets/js/breakpoints.min.js"></script>
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/main.js"></script>
+		<script src="https://kit.fontawesome.com/f00c075a6d.js" crossorigin="anonymous"></script>
 
 	</body>
 </html>
