--- a/experience.html
+++ b/experience.html
@@ -77,7 +77,7 @@
 				<section id="two" class="spotlights">
 					<section>
 						<a class="image">
-							<img src="images/mpm.jpg" alt="" data-position="center center" />
+							<img src="images/companies/mpm.jpg" alt="" data-position="center center" />
 						</a>
 						<div class="content">
 							<div class="inner">
@@ -95,7 +95,7 @@
 					</section>
 					<section>
 						<a class="image">
-							<img src="images/ateneu.jpg" alt="" data-position="top center" />
+							<img src="images/companies/ateneu.jpg" alt="" data-position="top center" />
 						</a>
 						<div class="content">
 							<div class="inner">
@@ -221,6 +221,7 @@
 		<script src="assets/js/breakpoints.min.js"></script>
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/main.js"></script>
+		<script src="https://kit.fontawesome.com/f00c075a6d.js" crossorigin="anonymous"></script>
 
 	</body>
 </html>
