--- a/projects.html
+++ b/projects.html
@@ -77,8 +77,8 @@
 				<!-- Two -->
 				<section id="two" class="spotlights">
 					<section>
-						<a href="generic.html" class="image">
-							<img src="images/portfolio.png" alt="Ilustration by https://storyset.com/" data-position="center center" />
+						<a class="image">
+							<img src="images/projects/portfolio.png" alt="Ilustration by https://storyset.com/" data-position="center center" />
 						</a>
 						<div class="content">
 							<div class="inner">
@@ -93,8 +93,8 @@
 						</div>
 					</section>
 					<section>
-						<a href="generic.html" class="image">
-							<img src="images/project2.png" alt="Ilustration by https://storyset.com/" data-position="top center" />
+						<a class="image">
+							<img src="images/projects/project2.png" alt="Ilustration by https://storyset.com/" data-position="top center" />
 						</a>
 						<div class="content">
 							<div class="inner">
@@ -219,6 +219,7 @@
 		<script src="assets/js/breakpoints.min.js"></script>
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/main.js"></script>
+		<script src="https://kit.fontawesome.com/f00c075a6d.js" crossorigin="anonymous"></script>
 
 	</body>
 </html>
