--- a/skills.html
+++ b/skills.html
@@ -61,17 +61,54 @@
 			<!-- Main -->
 			<div id="main">
 
-				<!-- One -->
-				<section id="one">
+				<section id="programming-languages">
 					<div class="inner">
 						<header class="major">
-							<h2>Sed amet aliquam</h2>
+							<h2><i class="fa fa-code"></i> Programming languages</h2>
 						</header>
-						<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>
+						<div class="row">
+							<div class="col-4 col-12-medium">
+								<img alt="C Programming" src="images/banners/banner-c.png" width="100%">
+								<img alt="C# Programming" src="images/banners/banner-csharp.png" width="100%">
+								<img alt="Python Programming" src="images/banners/banner-python.png" width="100%">
+								<img alt="Javascript Programming" src="images/banners/banner-javascript.png" width="100%">
+							</div>
+							<div class="col-4 col-12-medium">
+							</div>
+							<div class="col-4 col-12-medium">
+								<img alt="C++ Programming" src="images/banners/banner-cplusplus.png" width="100%">
+								<img alt="Java Programming" src="images/banners/banner-java.png" width="100%">
+								<img alt="Bash Scripting" src="images/banners/banner-bash.png" width="100%">
+								<img alt="HTML and CSS" src="images/banners/banner-html-css.png" width="100%">
+							</div>
+						</div>
 					</div>
 				</section>
 
-				<!-- Two -->
+				<section id="tools">
+					<div class="inner">
+						<header class="major">
+							<h2><i class="fa fa-cogs"></i> Tools</h2>
+						</header>
+						<div class="row">
+							<div class="col-4 col-12-medium">
+								<img alt="Docker" src="images/banners/banner-docker.png" width="100%">
+								<!--<img alt="Ansible" src="https://img.shields.io/badge/ANSIBLE-%23EE0000?style=for-the-badge&logo=ansible" width="100%">-->
+								<img alt="Git control version" src="https://img.shields.io/badge/GIT%20VERSION-black?style=for-the-badge&logo=git" width="100%">
+								<img alt="Javascript Programming" src="https://img.shields.io/badge/JAVASCRIPT-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black" width="100%">
+							</div>
+							<div class="col-4 col-12-medium">
+							</div>
+							<div class="col-4 col-12-medium">
+								<img alt="Kubernetes" src="images/banners/banner-kubernetes.png" width="100%">
+								<img alt="Slack" src="https://img.shields.io/badge/SLACK-4A154B?style=for-the-badge&logo=slack" width="100%">
+								<img alt="GitHub" src="https://img.shields.io/badge/GITHUB-181717?style=for-the-badge&logo=github" width="100%">
+							</div>
+						</div>
+					</div>
+				</section>
+
+				<!--
 				<section id="two" class="spotlights">
 					<section>
 						<a href="generic.html" class="image">
@@ -123,7 +160,6 @@
 					</section>
 				</section>
 
-				<!-- Three -->
 				<section id="three">
 					<div class="inner">
 						<header class="major">
@@ -135,6 +171,7 @@
 						</ul>
 					</div>
 				</section>
+				-->
 
 			</div>
 
@@ -212,6 +249,7 @@
 		<script src="assets/js/breakpoints.min.js"></script>
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/main.js"></script>
+		<script src="https://kit.fontawesome.com/f00c075a6d.js" crossorigin="anonymous"></script>
 
 	</body>
 </html>
