Tools skills ok

--- a/skills.html
+++ b/skills.html
@@ -83,9 +83,6 @@
 							</div>
 						</div>
 					</div>
-				</section>
-
-				<section id="tools">
 					<div class="inner">
 						<header class="major">
 							<h2><i class="fa fa-cogs"></i> Tools</h2>
@@ -94,17 +91,26 @@
 							<div class="col-4 col-12-medium">
 								<img alt="Docker" src="images/banners/banner-docker.png" width="100%">
 								<!--<img alt="Ansible" src="https://img.shields.io/badge/ANSIBLE-%23EE0000?style=for-the-badge&logo=ansible" width="100%">-->
-								<img alt="Git control version" src="https://img.shields.io/badge/GIT%20VERSION-black?style=for-the-badge&logo=git" width="100%">
-								<img alt="Javascript Programming" src="https://img.shields.io/badge/JAVASCRIPT-F7DF1E?style=for-the-badge&logo=javascript&logoColor=black" width="100%">
+								<img alt="Git control version" src="images/banners/banner-git.png" width="100%">
+								<img alt="Jenkins" src="images/banners/banner-jenkins.png" width="100%">
+								<img alt="Amazon AWS" src="images/banners/banner-aws.png" width="100%">
+								<img alt="Visual Studio Code" src="images/banners/banner-code.png" width="100%">
 							</div>
 							<div class="col-4 col-12-medium">
 							</div>
 							<div class="col-4 col-12-medium">
 								<img alt="Kubernetes" src="images/banners/banner-kubernetes.png" width="100%">
-								<img alt="Slack" src="https://img.shields.io/badge/SLACK-4A154B?style=for-the-badge&logo=slack" width="100%">
-								<img alt="GitHub" src="https://img.shields.io/badge/GITHUB-181717?style=for-the-badge&logo=github" width="100%">
+								<img alt="GitHub" src="images/banners/banner-github.png" width="100%">
+								<img alt="Linux kernel / OS" src="images/banners/banner-linux.png" width="100%">
+								<img alt="Slack" src="images/banners/banner-slack.png" width="100%">
+								<img alt="Alacritty" src="images/banners/banner-alacritty.png" width="100%">
 							</div>
 						</div>
+					</div>
+					<div class="inner">
+						<header class="major">
+							<h2><i class="fa fa-cogs"></i> Hard skills</h2>
+						</header>
 					</div>
 				</section>
 
