Deleted Font awesome script online

--- a/skills.html
+++ b/skills.html
@@ -109,7 +109,7 @@
 					</div>
 					<div class="inner">
 						<header class="major">
-							<h2><i class="fa fa-cogs"></i> Hard skills</h2>
+							<h2><i class="fa fa-bolt"></i> Hard skills</h2>
 						</header>
 					</div>
 				</section>
@@ -255,7 +255,5 @@
 		<script src="assets/js/breakpoints.min.js"></script>
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/main.js"></script>
-		<script src="https://kit.fontawesome.com/f00c075a6d.js" crossorigin="anonymous"></script>
-
 	</body>
 </html>
