--- a/skills.html
+++ b/skills.html
@@ -43,7 +43,6 @@
 			</nav>
 
 			<!-- Banner -->
-			<!-- Note: The "styleN" class below should match that of the header element. -->
 			<section id="banner" class="style3">
 				<div class="inner">
 					<span class="image">
@@ -52,9 +51,6 @@
 					<header class="major">
 						<h1>Skills</h1>
 					</header>
-					<div class="content">
-						<p>IN PROGRESS...</p>
-					</div>
 				</div>
 			</section>
 
@@ -83,6 +79,7 @@
 							</div>
 						</div>
 					</div>
+
 					<div class="inner">
 						<header class="major">
 							<h2><i class="fa fa-cogs"></i> Tools</h2>
@@ -107,78 +104,34 @@
 							</div>
 						</div>
 					</div>
+
 					<div class="inner">
 						<header class="major">
 							<h2><i class="fa fa-bolt"></i> Hard skills</h2>
 						</header>
+						<ul>
+    						<li>Infrastructure as Code (IaC) and Configuration Management</li>
+    						<li>Continuous Integration and Continuous Delivery (CI/CD) Pipelines</li>
+    						<li>Cloud Services and Architecture (AWS)</li>
+    						<li>Containerization and Orchestration (Docker, Kubernetes)</li>
+    						<li>Scripting and Automation (Bash)</li>
+    						<li>Version Control Systems (Git)</li>
+    						<li>Database Management and Deployment (SQL/NoSQL)</li>
+						</ul>
 					</div>
-				</section>
 
-				<!--
-				<section id="two" class="spotlights">
-					<section>
-						<a href="generic.html" class="image">
-							<img src="images/pic08.jpg" alt="" data-position="center center" />
-						</a>
-						<div class="content">
-							<div class="inner">
-								<header class="major">
-									<h3>Orci maecenas</h3>
-								</header>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
-								<ul class="actions">
-									<li><a href="generic.html" class="button">Learn more</a></li>
-								</ul>
-							</div>
-						</div>
-					</section>
-					<section>
-						<a href="generic.html" class="image">
-							<img src="images/pic09.jpg" alt="" data-position="top center" />
-						</a>
-						<div class="content">
-							<div class="inner">
-								<header class="major">
-									<h3>Rhoncus magna</h3>
-								</header>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
-								<ul class="actions">
-									<li><a href="generic.html" class="button">Learn more</a></li>
-								</ul>
-							</div>
-						</div>
-					</section>
-					<section>
-						<a href="generic.html" class="image">
-							<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
-						</a>
-						<div class="content">
-							<div class="inner">
-								<header class="major">
-									<h3>Sed nunc ligula</h3>
-								</header>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
-								<ul class="actions">
-									<li><a href="generic.html" class="button">Learn more</a></li>
-								</ul>
-							</div>
-						</div>
-					</section>
-				</section>
-
-				<section id="three">
 					<div class="inner">
 						<header class="major">
-							<h2>Massa libero</h2>
+							<h2><i class="fa fa-cloud"></i> Soft skills</h2>
 						</header>
-						<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
-						<ul class="actions">
-							<li><a href="generic.html" class="button next">Get Started</a></li>
+						<ul>
+    						<li>Collaboration and Teamwork</li>
+    						<li>Effective Communication</li>
+    						<li>Problem-Solving and Critical Thinking</li>
+    						<li>Adaptability and Flexibility</li>
 						</ul>
 					</div>
 				</section>
-				-->
-
 			</div>
 
 			<!-- Contact -->
