move default images inside default folder

--- a/projects.html
+++ b/projects.html
@@ -47,7 +47,7 @@
 			<section id="banner" class="style4">
 				<div class="inner">
 					<span class="image">
-						<img src="images/pic07.jpg" alt="" />
+						<img src="images/default/pic07.jpg" alt="" />
 					</span>
 					<header class="major">
 						<h1>Projects</h1>
@@ -112,7 +112,7 @@
 					<!--
 					<section>
 						<a href="generic.html" class="image">
-							<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
+							<img src="images/default/pic10.jpg" alt="" data-position="25% 25%" />
 						</a>
 						<div class="content">
 							<div class="inner">
