--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 			<section id="banner" class="style5">
 				<div class="inner">
 					<span class="image">
-						<img src="images/pic07.jpg" alt="" />
+						<img src="images/default/pic07.jpg" alt="" />
 					</span>
 					<header class="major">
 						<h1>About me</h1>
@@ -75,7 +75,7 @@
 				<section id="two" class="spotlights">
 					<section>
 						<a href="generic.html" class="image">
-							<img src="images/pic08.jpg" alt="" data-position="center center" />
+							<img src="images/default/pic08.jpg" alt="" data-position="center center" />
 						</a>
 						<div class="content">
 							<div class="inner">
@@ -91,7 +91,7 @@
 					</section>
 					<section>
 						<a href="generic.html" class="image">
-							<img src="images/pic09.jpg" alt="" data-position="top center" />
+							<img src="images/default/pic09.jpg" alt="" data-position="top center" />
 						</a>
 						<div class="content">
 							<div class="inner">
@@ -107,7 +107,7 @@
 					</section>
 					<section>
 						<a href="generic.html" class="image">
-							<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
+							<img src="images/default/pic10.jpg" alt="" data-position="25% 25%" />
 						</a>
 						<div class="content">
 							<div class="inner">
