--- a/education.html
+++ b/education.html
@@ -47,7 +47,7 @@
 			<section id="banner" class="style2">
 				<div class="inner">
 					<span class="image">
-						<img src="images/pic07.jpg" alt="" />
+						<img src="images/default/pic07.jpg" alt="" />
 					</span>
 					<header class="major">
 						<h1>Education and Certificates</h1>
