--- a/experience.html
+++ b/experience.html
@@ -47,7 +47,7 @@
 			<section id="banner" class="style1">
 				<div class="inner">
 					<span class="image">
-						<img src="images/pic07.jpg" alt="" />
+						<img src="images/default/pic07.jpg" alt="" />
 					</span>
 					<header class="major">
 						<h1>Relevant experience</h1>
@@ -114,7 +114,7 @@
 					<!--
 					<section>
 						<a href="generic.html" class="image">
-							<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
+							<img src="images/default/pic10.jpg" alt="" data-position="25% 25%" />
 						</a>
 						<div class="content">
 							<div class="inner">
