Added backgrounds + cleaned code

--- a/education.html
+++ b/education.html
@@ -43,19 +43,14 @@
 			</nav>
 
 			<!-- Banner -->
-			<!-- Note: The "styleN" class below should match that of the header element. -->
 			<section id="banner" class="style2">
 				<div class="inner">
 					<span class="image">
-						<img src="images/default/pic07.jpg" alt="" />
+						<img src="images/backgrounds/education.jpg" alt="" />
 					</span>
 					<header class="major">
 						<h1>Education and Certificates</h1>
 					</header>
-					<!--<div class="content">
-						<p>Lorem ipsum dolor sit amet nullam consequat<br />
-						sed veroeros. tempus adipiscing nulla.</p>
-					</div>-->
 				</div>
 			</section>
 
@@ -67,7 +62,6 @@
 						<header class="major">
 							<h2>Education</h2>
 						</header>
-						<!--<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>-->
 					</div>
 				</section>
 
@@ -95,7 +89,6 @@
 						<header class="major">
 							<h2>Certificates</h2>
 						</header>
-						<!--<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>-->
 					</div>
 				</section>
 
