--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				<section id="one" class="tiles">
 					<article>
 						<span class="image">
-							<img src="images/default/pic01.jpg" alt="" />
+							<img src="images/backgrounds/experience.jpg" alt="" />
 						</span>
 						<header class="major">
 							<h3><a href="experience.html" class="link"><i class="fa fa-briefcase"></i>  Experience</a></h3>
@@ -74,7 +74,7 @@
 					</article>
 					<article>
 						<span class="image">
-							<img src="images/default/pic02.jpg" alt="" />
+							<img src="images/backgrounds/education.jpg" alt="" />
 						</span>
 						<header class="major">
 							<h3><a href="education.html" class="link"><i class="fa fa-graduation-cap"></i>  Education and Certificates</a></h3>
@@ -83,7 +83,7 @@
 					</article>
 					<article>
 						<span class="image">
-							<img src="images/default/pic03.jpg" alt="" />
+							<img src="images/backgrounds/skills.jpg" alt="" />
 						</span>
 						<header class="major">
 							<h3><a href="skills.html" class="link"><i class="fa fa-flask"></i>  Skills</a></h3>
@@ -92,7 +92,7 @@
 					</article>
 					<article>
 						<span class="image">
-							<img src="images/default/pic04.jpg" alt="" />
+							<img src="images/backgrounds/projects.jpg" alt="" />
 						</span>
 						<header class="major">
 							<h3><a href="projects.html" class="link"><i class="fa fa-terminal"></i>  Projects</a></h3>
@@ -101,7 +101,7 @@
 					</article>
 					<article>
 						<span class="image">
-							<img src="images/default/pic05.jpg" alt="" />
+							<img src="images/backgrounds/about.jpg" alt="" />
 						</span>
 						<header class="major">
 							<h3><a href="about.html" class="link"><i class="fa fa-user"></i>  About me</a></h3>
@@ -118,22 +118,6 @@
 						</header>
 					</article>
 				</section>
-
-				<!-- Two -->
-				<!--
-				<section id="two">
-					<div class="inner">
-						<header class="major">
-							<h2>Massa libero</h2>
-						</header>
-						<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
-						<ul class="actions">
-							<li><a href="landing.html" class="button next">Get Started</a></li>
-						</ul>
-					</div>
-				</section>
-				-->
-
 			</div>
 
 			<!-- Contact -->
