--- a/skills.html
+++ b/skills.html
@@ -46,7 +46,7 @@
 			<section id="banner" class="style3">
 				<div class="inner">
 					<span class="image">
-						<img src="images/default/pic07.jpg" alt="" />
+						<img src="images/backgrounds/skills.jpg" alt="" />
 					</span>
 					<header class="major">
 						<h1>Skills</h1>
