--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 			<section id="banner" class="style5">
 				<div class="inner">
 					<span class="image">
-						<img src="images/default/pic07.jpg" alt="" />
+						<img src="images/backgrounds/about.jpg" alt="" />
 					</span>
 					<header class="major">
 						<h1>About me</h1>
